2007-05-11  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (get-monolite-latest): Redirect wget output too.

2007-05-07  Wade Berrier  <wberrier@novell.com>

	* scripts/mono-find-requires.in: don't use length() on arrays;
	doesn't work on older gawk versions.  Calculate size manually instead.

2007-05-07  Raja R Harinath  <rharinath@novell.com>

	Fix parallel make.
	* runtime/Makefile.am (test-support-file): Remove.  Move rules ...
	(_tmpinst/bin/mcs, _tmpinst/bin/gmcs, _tmpinst/bin/ilasm): ... here.
	Reported by "Stephen A. Jazdzewski" <steve@jazd.com>

2007-05-05  Wade Berrier  <wberrier@novell.com>

	* scripts/mono-find-provides.in: don't use 'which' anymore (never solved
	anything since it broke symlinks)
	* scripts/mono-find-requires.in: also don't use 'which'
	Parse .config files to look for native libs.  Honor 'os' attributes for
	dllmaps.  Query rpm db for package that provides this lib.  Support 64bit
	rpm configurations, as well as 32bit running on 64bit.

2007-04-27  Marek Habersack  <mhabersack@novell.com>

	* data/net_2_0/web.config: use fully qualified assembly names in
	<compilation><assemblies>.

2007-04-19  Wade Berrier  <wberrier@novell.com>

	* configure.in: version bump -> 1.2.4

2007-04-15  Marek Habersack  <mhabersack@novell.com>

	* data/net_2_0/web.config: add the default build providers
	configuration.

2007-04-06  Andreas Faerber  <andreas.faerber@web.de>

	* configure.in: Added support for Solaris/amd64. Fixes bug #81325

2007-04-06  Marek Habersack  <mhabersack@novell.com>

	* data/net_2_0/machine.config: corrected the xhtmlConformance
	entry to reference correct type.

	* data/net_2_0/web.config: siteMap must be enabled by
	default. Fixes bug #80611

2007-04-05  Marek Habersack  <mhabersack@novell.com>

	* data/browscap.ini: updated to the latest version.
	Applied Mono-specific changes.

2007-03-28  Raja R Harinath  <rharinath@novell.com>

	* runtime/mono-wrapper.in (PATH): Include _tmpinst/bin.  Ensure